  ! New SetColor32/SetColor64/SetColorF/SetPColor32/SetPColor64/SetPColorF methods
! IReadableBitmapDataRow interface: (breaking only if you implement it, which is normally not needed)
  ! New GetColor32/GetColor64/GetColorF/GetPColor32/GetPColor64/GetPColorF methods
+ KnownPixelFormat enum:
  + New Format96bppRgb, Format128bppRgba and Format128bppPRgba values
- PixelFormatInfo struct:
  - LinearGamma property: setting it to false did not reset the value.


~~~~~~~~~
* v7.2.0:
~~~~~~~~~

* KGySoft.Drawing.Imaging namespace
===================================
+ The Color64 struct has been made public
+ The ColorF struct has been made public
+ New PColor32 struct
+ New PColor64 struct
+ New PColorF struct
+ Color32 struct:
  + New ToArgbUInt32/ToRgbUInt32 methods
  + New FromArgb/FromRgb overload from uint
* ColorExtensions class:
  + New ToColor/ToColor32/ToColor64/ToColorF/ToPColor32/ToPColor64/ToPColorF methods
  + New ToPremultiplied/ToStraight methods
  + New GetBrightness overloads
  + New GetBrightnessF methods
  + New Blend overloads
  + New TolerantEquals overloads
  * Improving performance (Blend, GetBrightness and some internal conversion operations)
* ColorSpaceHelper class:
  + Adding new ToFloat overload from UInt16
  + Adding new ToUInt16 methods
  + Adding new SrgbToLinear overload from UInt16
  + Adding new LinearToSrgb16Bit method
  + Adding new ToByte overload from UInt16
  - Fixing float-float version of LinearToSrgb for some out-of-bounds values
* Palette class:
  * Grayscale256 method: improving grayscale mapping when working in the linear color space
  + Grayscale16/Grayscale4 methods: special linear color space handling even if directMapping is true
+ PredefinedColorsQuantizer class:
  + New FromCustomFunction overload
* BitmapDataFactory class:
  * Improving grayscale conversion for the known grayscale pixel format when working in the linear color space
- BitmapDataExtensions class: